# lastNic

./: .gitignore  CMakeLists.txt  Makefile  README.md  azerty_keymap.h  debian@192.168.7.2  demo.sh  key.pem  list_input_devices.sh  main.cpp  private_key.pem  setup_usb_gadget.sh  usb_keyboard  usb_keyboard.h
conf/: layer.conf  site.conf
conf/distro/: lafon-installer.conf  lafon.conf
conf/machine/: beaglebone-lafon-installer.conf  beaglebone-lafon.conf
kas-files/: kas-easy-lafon-master-dev-installer.yml  kas-easy-lafon-master-dev.yml  kas-easy-lafon-master-installer.yml  kas-easy-lafon-master.yml
recipes-bsp/u-boot/: u-boot_%.bbappend
recipes-bsp/u-boot-pulse/: u-boot-pulse.bb
recipes-connectivity/ssh-key/: ssh-key.bb
recipes-core/base-files/: base-files_%.bbappend
recipes-core/dropbear/: dropbear_2019.78.bbappend
recipes-core/images/: easyborn-lafon-installer.bb  easyborn-lafon-master.bb  easyborn-lafon-masterdev.bb  update-image.bb
recipes-core/os-release/: os-release.bbappend
recipes-core/psplash/: psplash_%.bbappend
recipes-core/systemd/: systemd_%.bbappend
recipes-core/systemd-conf/: systemd-conf_%.bbappend
recipes-custom/script-install-image/: script-install-image.bb
recipes-custom/script-install-image-terrain/: script-install-image-terrain.bb
recipes-custom/script-update-image/: script-update-imageOCPP15.bb  script-update-imageOCPP15.oldTest
recipes-custom/sdcardboot/: sdcardboot.bb
recipes-custom/store-image-lafon/: store-image-lafon.bb
recipes-lafon/ihm/: ihm_git.bb
wic/: easyborn (MID).wks  easyborn.wks  easybornInstall.wks
(+157 files in other folders)
